tests/specs/ecosystem/hwclass/textteller/1_0_0.test
hwclass/textteller/1.0.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:lit@^2.1.3": "npm:lit@2.8.0"
    },
    "npm": {
      "@lit-labs/ssr-dom-shim@1.2.0": {
        "integrity": "sha512-yWJKmpGE6lUURKAaIltoPIE/wrbY3TEkqQt+X0m+7fQNnAv0keydnYvbiJFP1PnMhizmIWRWOG5KLhYyc/xl+g==",
        "dependencies": {}
      },
      "@lit/reactive-element@1.6.3": {
        "integrity": "sha512-QuTgnG52Poic7uM1AN5yJ09QMe0O28e10XzSvWDz02TJiiKee4stsiownEIadWm8nYzyDAyT+gKzUoZmiWQtsQ==",
        "dependencies": {
          "@lit-labs/ssr-dom-shim": "@lit-labs/ssr-dom-shim@1.2.0"
        }
      },
      "@types/trusted-types@2.0.7": {
        "integrity": "sha512-ScaPdn1dQczgbl0QFTeTOmVHFULt394XJgOQNoyVhZ6r2vLnMLJfBPd53SB52T/3G36VI1/g2MZaX0cwDuXsfw==",
        "dependencies": {}
      },
      "lit-element@3.3.3": {
        "integrity": "sha512-XbeRxmTHubXENkV4h8RIPyr8lXc+Ff28rkcQzw3G6up2xg5E8Zu1IgOWIwBLEQsu3cOVFqdYwiVi0hv0SlpqUA==",
        "dependencies": {
          "@lit-labs/ssr-dom-shim": "@lit-labs/ssr-dom-shim@1.2.0",
          "@lit/reactive-element": "@lit/reactive-element@1.6.3",
          "lit-html": "lit-html@2.8.0"
        }
      },
      "lit-html@2.8.0": {
        "integrity": "sha512-o9t+MQM3P4y7M7yNzqAyjp7z+mQGa4NS4CxiyLqFPyFWyc4O+nodLrkrxSaCTrla6M5YOLaT3RpbbqjszB5g3Q==",
        "dependencies": {
          "@types/trusted-types": "@types/trusted-types@2.0.7"
        }
      },
      "lit@2.8.0": {
        "integrity": "sha512-4Sc3OFX9QHOJaHbmTMk28SYgVxLN3ePDjg7hofEft2zWlehFL3LiAuapWc4U/kYwMYJSh2hTCPZ6/LIC7ii0MA==",
        "dependencies": {
          "@lit/reactive-element": "@lit/reactive-element@1.6.3",
          "lit-element": "lit-element@3.3.3",
          "lit-html": "lit-html@2.8.0"
        }
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'LitElement'.
  render(): TemplateResult | undefined {
  ~~~~~~
    at file://<tmpdir>/src/index.ts:17:3

error: Type checking failed.

